--- a/Navi.html
+++ b/Navi.html
@@ -17,9 +17,9 @@
     </a>
 
     <div class="header__search">
-      <input id="header__searchInput" type="text" placeholder="Wyszukaj książke po tytule ...." />
+      <input id="searchInput" class="header__searchInput" type="text" placeholder="Wyszukaj książke po tytule ...." />
     </div>
-    <button id="btrSearch" type="search">Search</button>
+    <button id="searchButton" class="btrSearch" type="search">Search</button>
    
   </div>
 
