--- a/Navi.html
+++ b/Navi.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
   <div class="header">
     <a class="home__index" href="navi.html">
     <img class="header__logo"  alt="logo" 
@@ -20,12 +21,18 @@
       <input id="searchInput" class="header__searchInput" type="text" placeholder="Wyszukaj książke po tytule ...." />
     </div>
     <button id="searchButton" class="btrSearch" type="search">Search</button>
+
+      <!-- <img class="bg" alt="pictureBacground" src="./picture/bg.jpg"/> -->
+
    
+    
   </div>
 
   <div id="books" class="conteiner">
- 
+
   </div>
+
+
 
   <script src='./Navi.js'></script>
 </body>
