--- a/Navi.html
+++ b/Navi.html
@@ -24,7 +24,7 @@
 
       <!-- <img class="bg" alt="pictureBacground" src="./picture/bg.jpg"/> -->
 
-   
+   <!-- <img src="./picture/alice.jpg"/> -->
     
   </div>
 
