--- a/Navi.html
+++ b/Navi.html
@@ -24,6 +24,25 @@
     
   </div>
 
+  <form id="add-form">
+    <label for="addTitle"></label>
+    <input class = "" type="text" id="addTitle" name="addTitle" placeholder="dodaj tytuł...">
+
+    <label for="addYear"></label>
+    <input class = "" type="text" id="addYear" name="addYear" placeholder="dodaj rok...">
+
+    <label for="addCategory"></label>
+    <input class = "" type="text" id="addCategory" name="addCategory" placeholder="dodaj kategorię...">
+
+    <label for="addAuthor"></label>
+    <input class = "" type="text" id="addAuthor" name="addAuthor" placeholder="dodaj autora...">
+
+    <label for="addSrc"></label>
+    <input class = "" type="text" id="addSrc" name="addSrc" placeholder="dodaj źródło okładki...">
+
+    <button type="submit" class="" id="btnAdd">Dodaj książkę</button>
+  </form>
+
   <div id="books" class="conteiner">
 
   </div>
