--- a/Navi.html
+++ b/Navi.html
@@ -13,32 +13,35 @@
 
   <div class="header">
     <a class="home__index" href="navi.html">
-    <img class="header__logo"  alt="logo" 
-      src="https://images-platform.99static.com//o5_Q8pUagynJuidDta7JRMJ7_K8=/311x281:1652x1622/fit-in/590x590/99designs-contests-attachments/74/74026/attachment_74026482"  />
+      <img class="header__logo" alt="logo"
+        src="https://images-platform.99static.com//o5_Q8pUagynJuidDta7JRMJ7_K8=/311x281:1652x1622/fit-in/590x590/99designs-contests-attachments/74/74026/attachment_74026482" />
     </a>
 
     <div class="header__search">
       <input id="searchInput" class="header__searchInput" type="text" placeholder="Wyszukaj książke po tytule ...." />
     </div>
     <button id="searchButton" class="btrSearch" type="search">Search</button>
-    
+
   </div>
 
   <form id="add-form">
     <label for="addTitle"></label>
-    <input class = "" type="text" id="addTitle" name="addTitle" placeholder="dodaj tytuł...">
+    <input class="" type="text" id="addTitle" name="addTitle" placeholder="dodaj tytuł...">
 
     <label for="addYear"></label>
-    <input class = "" type="text" id="addYear" name="addYear" placeholder="dodaj rok...">
+    <input class="" type="text" id="addYear" name="addYear" placeholder="dodaj rok...">
 
     <label for="addCategory"></label>
-    <input class = "" type="text" id="addCategory" name="addCategory" placeholder="dodaj kategorię...">
+    <input class="" type="text" id="addCategory" name="addCategory" placeholder="dodaj kategorię...">
 
     <label for="addAuthor"></label>
-    <input class = "" type="text" id="addAuthor" name="addAuthor" placeholder="dodaj autora...">
+    <input class="" type="text" id="addAuthor" name="addAuthor" placeholder="dodaj autora...">
 
     <label for="addSrc"></label>
-    <input class = "" type="text" id="addSrc" name="addSrc" placeholder="dodaj źródło okładki...">
+    <input class="" type="text" id="addSrc" name="addSrc" placeholder="dodaj źródło okładki...">
+
+    <label for="addPrice"></label>
+    <input class="" type="text" id="addPrice" name="addPrice" placeholder="podja cenę...">
 
     <button type="submit" class="" id="btnAdd">Dodaj książkę</button>
   </form>
