--- a/Navi.html
+++ b/Navi.html
@@ -26,24 +26,24 @@
 
   <form id="add-form">
     <label for="addTitle"></label>
-    <input class="" type="text" id="addTitle" name="addTitle" placeholder="dodaj tytuł...">
+    <input class="add" type="text" id="addTitle" name="addTitle" placeholder="dodaj tytuł...">
 
     <label for="addYear"></label>
-    <input class="" type="text" id="addYear" name="addYear" placeholder="dodaj rok...">
+    <input class="add" type="text" id="addYear" name="addYear" placeholder="dodaj rok...">
 
     <label for="addCategory"></label>
-    <input class="" type="text" id="addCategory" name="addCategory" placeholder="dodaj kategorię...">
+    <input class="add" type="text" id="addCategory" name="addCategory" placeholder="dodaj kategorię...">
 
     <label for="addAuthor"></label>
-    <input class="" type="text" id="addAuthor" name="addAuthor" placeholder="dodaj autora...">
+    <input class="add" type="text" id="addAuthor" name="addAuthor" placeholder="dodaj autora...">
 
     <label for="addSrc"></label>
-    <input class="" type="text" id="addSrc" name="addSrc" placeholder="dodaj źródło okładki...">
+    <input class="add" type="text" id="addSrc" name="addSrc" placeholder="dodaj źródło okładki...">
 
     <label for="addPrice"></label>
-    <input class="" type="text" id="addPrice" name="addPrice" placeholder="podja cenę...">
+    <input class="add" type="text" id="addPrice" name="addPrice" placeholder="podja cenę...">
 
-    <button type="submit" class="" id="btnAdd">Dodaj książkę</button>
+    <button type="submit" class="addBtrBook" id="btnAdd">Dodaj książkę</button>
   </form>
 
   <div id="books" class="conteiner">
